--- a/app/src/main/res/layout/artist.xml
+++ b/app/src/main/res/layout/artist.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="72dp"
     android:foreground="?android:attr/selectableItemBackground">
 
     <ImageView
-        android:id="@+id/artist_image"
-        android:layout_width="72dp"
-        android:layout_height="match_parent"
-        android:padding="16dp"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:contentDescription="@string/artist_image"
-        android:src="@drawable/default_art"/>
+            android:id="@+id/artist_image"
+            android:layout_width="72dp"
+            android:layout_height="match_parent"
+            android:padding="16dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:contentDescription="@string/artist_image"
+            android:src="@drawable/default_art"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:paddingStart="72dp"
-        android:paddingEnd="16dp"
-        android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:paddingStart="72dp"
+            android:paddingEnd="16dp"
+            android:orientation="vertical">
         <TextView
-            android:id="@+id/artist_name"
-            style="@style/TitleText"/>
+                android:id="@+id/artist_name"
+                style="@style/TitleText"/>
 
         <TextView
-            android:id="@+id/artist_desc"
-            style="@style/DescText"/>
+                android:id="@+id/artist_desc"
+                style="@style/DescText"/>
     </LinearLayout>
 </RelativeLayout>
