--- a/app/src/main/res/layout/fragment_albums.xml
+++ b/app/src/main/res/layout/fragment_albums.xml
@@ -1,32 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="?android:attr/windowBackground"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView
-        android:id="@+id/album_grid"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnWidth="150dp"
-        android:gravity="center"
-        android:paddingTop="7.5dp"
-        android:paddingBottom="7.5dp"
-        android:background="@color/lightWindowBackground"
-        app:fastScrollThumbColor="@color/colorAccent"
-        app:fastScrollPopupBgColor="@color/colorAccent"
-        app:fastScrollPopupTextColor="@android:color/primary_text_dark"
-        android:clipToPadding="false"
-        android:stretchMode="columnWidth" />
+        android:background="?android:attr/windowBackground">
+
+    <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView
+            android:id="@+id/album_grid"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:columnWidth="150dp"
+            android:gravity="center"
+            android:paddingTop="7.5dp"
+            android:paddingBottom="7.5dp"
+            android:background="@color/lightWindowBackground"
+            app:fastScrollThumbColor="@color/colorAccent"
+            app:fastScrollPopupBgColor="@color/colorAccent"
+            app:fastScrollPopupTextColor="@android:color/primary_text_dark"
+            android:clipToPadding="false"
+            android:stretchMode="columnWidth"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone"
-        android:id="@+id/no_albums"
-        android:text="@string/no_albums"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            android:id="@+id/no_albums"
+            android:text="@string/no_albums"/>
 
 </RelativeLayout>
